examples/NetworkPolicyBlockEgressAllFromNamespace/tests/test2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-from-namespace
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
